# wxSVG

./: .cdtproject  .cproject  .gitignore  .project  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  autogen.sh  builddebian  configure  configure.ac  configure.in  ffmpeg1.patch  index.html  libagg.dev  libtool  libwxsvg.pc.in  ltmain.sh  ubuntuspec.patch  wxSVG.dev
include/: Makefile.am  Makefile.in
include/wxSVG/: Animated.h  CSSStyleDeclaration.h  CSSStyleDeclaration_styles.h  CSSValue.h  CSSValue_colours.h  CSSValues.h  Document.h  DocumentCSS.h  DocumentEvent.h  Element.h  ElementTimeControl.h  ElementTransform.h  EventTarget.h  ExifHandler.h  GetSVGDocument.h  Makefile.am  Makefile.in  NodeList.h  NodeListCls.h  RGBColor.h  SVGAElement.h  SVGAltGlyphDefElement.h  SVGAltGlyphElement.h  SVGAltGlyphItemElement.h  SVGAngle.h  SVGAnimateColorElement.h  SVGAnimateElement.h  SVGAnimateMotionElement.h  SVGAnimateTransformElement.h  SVGAnimatedAngle.h  SVGAnimatedBoolean.h  SVGAnimatedEnumeration.h  SVGAnimatedInteger.h  SVGAnimatedLength.h  SVGAnimatedLengthList.h  SVGAnimatedNumber.h  SVGAnimatedNumberList.h  SVGAnimatedPathData.h  SVGAnimatedPoints.h  SVGAnimatedPreserveAspectRatio.h  (+164 more)
include/wxSVGXML/: Makefile.am  Makefile.in  svgxml.h
include/wxXML/: Makefile.am  Makefile.in  svgxml.h  xml.h  xmlhelpr.h
index_files/: dbimage.php
scripts/: cpp.py  cppHeader.py  cppImpl.py  enum_map.py  genAnimated.py  genCSS.py  genFile.py  genGetAttribute.py  genGetAttributes.py  genHasAttribute.py  genList.py  genSetAttribute.py  genSvgElement.py  generate.py  idl.py  interfaces.py  mapDtdIdl.py  parse_attr.py  parse_dtd.py  parse_idl.py
share/: CSS21propidx.html  svg.dtd  svg.idl
src/: CSSStyleDeclaration.cpp  CSSValue.cpp  ElementTransform.cpp  Elements_CopyConstructors.cpp  Elements_GetAttribute.cpp  Elements_GetAttributes.cpp  Elements_HasAttribute.cpp  Elements_SetAttribute.cpp  ExifHandler.cpp  GetSVGDocument.cpp  Makefile.am  Makefile.in  NodeList.cpp  SVGAngle.cpp  SVGAnimateMotionElement.cpp  SVGAnimateTransformElement.cpp  SVGAnimatedType.cpp  SVGAnimationElement.cpp  SVGCanvas.cpp  SVGCanvasItem.cpp  SVGCircleElement.cpp  SVGColor.cpp  SVGDocument.cpp  SVGDocument_CreateElement.cpp  SVGEllipseElement.cpp  SVGFEGaussianBlurElement.cpp  SVGFilterElement.cpp  SVGFitToViewBox.cpp  SVGImageElement.cpp  SVGLength.cpp  SVGLengthList.cpp  SVGLineElement.cpp  SVGLocatable.cpp  SVGMarkerElement.cpp  SVGMatrix.cpp  SVGNumberList.cpp  SVGPaint.cpp  SVGPathElement.cpp  SVGPathSegList.cpp  SVGPoint.cpp  (+36 more)
src/cairo/: Makefile.am  Makefile.in  SVGCanvasCairo.cpp  SVGCanvasCairo.h  SVGCanvasImageCairo.cpp  SVGCanvasImageCairo.h  SVGCanvasPathCairo.cpp  SVGCanvasPathCairo.h  SVGCanvasTextCairo.cpp  SVGCanvasTextCairo.h
src/svgxml/: Makefile.am  Makefile.in  svgxml.cpp
svgview/: .gitignore  Makefile.am  Makefile.in  svgview.cpp  svgview.dev  svgview.h  svgview.rc
